versions/26.2.0/docs/MediaFileReference.md
# MediaFileReference


## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**volume** | [**VolumeMiniWithCloudAccount**](VolumeMiniWithCloudAccount.md) |  | [optional] 
**info** | **{str: (str, none_type)}** |  | [optional] [readonly] 
**custom_fields** | **{str: (str, none_type)}** |  | [optional] [readonly] 
**resolved_permission** | [**MediaRootPermission**](MediaRootPermission.md) |  | [optional] 
**parent_file** | **{str: (bool, date, datetime, dict, float, int, list, str, none_type)}** |  | [optional] [readonly] 
**root** | [**MediaRootMini**](MediaRootMini.md) |  | [optional] 
**effective_custom_fields** | **{str: (str, none_type)}, none_type** |  | [optional] [readonly] 
**modified_by** | [**ElementsUserMini**](ElementsUserMini.md) |  | [optional] 
**full_path** | **str** |  | [optional] [readonly] 
**path_permissions** | [**PathPermissions**](PathPermissions.md) |  | [optional] 
**is_shared** | **bool, none_type** |  | [optional] [readonly] 
**is_hardlink** | **bool** |  | [optional] [readonly] 
**is_bookmarked** | **bool, none_type** |  | [optional] [readonly] 
**exclusion_info** | [**MediaFileExclusionInfo**](MediaFileExclusionInfo.md) |  | [optional] 
**child_count** | **int, none_type** |  | [optional] [readonly] 
**name** | **str** |  | [optional] [readonly] 
**path** | **str** |  | [optional] [readonly] 
**pathhash** | **str** |  | [optional] [readonly] 
**ancestry** | **str** |  | [optional] [readonly] 
**is_dir** | **bool** |  | [optional] [readonly] 
**total_files** | **int, none_type** |  | [optional] [readonly] 
**size** | **int** |  | [optional] [readonly] 
**mtime** | **int** |  | [optional] [readonly] 
**present** | **bool** |  | [optional] [readonly] 
**archived** | **bool** |  | [optional] [readonly] 
**needs_rescan** | **bool** |  | [optional] [readonly] 
**is_showroom** | **bool** |  | [optional] [readonly] 
**bundle_index** | **int** |  | [optional] [readonly] 
**modified** | **datetime** |  | [optional] [readonly] 
**storage_class** | **str, none_type** |  | [optional] [readonly] 
**restore_expires_at** | **datetime, none_type** |  | [optional] [readonly] 
**parent** | **int, none_type** |  | [optional] [readonly] 
**bundle** | **int, none_type** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


